@@ -46,3 +46,24 @@ int32_t SPVM__Net__SSLeay__X509_STORE__set_flags(SPVM_ENV* env, SPVM_VALUE* stac
   return 0;
 }
 
+int32_t SPVM__Net__SSLeay__X509_STORE__add_crl(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  X509_STORE* x509_store = env->get_pointer(env, stack, obj_self);
+  
+  void* obj_x509_crl = stack[1].oval;
+  X509_CRL* x509_crl = env->get_pointer(env, stack, obj_x509_crl);
+  
+  int32_t status = X509_STORE_add_crl(x509_store, x509_crl);
+  
+  if (!(status == 1)) {
+    return env->die(env, stack, "X509_STORE_add_crl failed.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  stack[0].ival = status;
+  
+  return 0;
+}
+
