@@ -3,6 +3,7 @@
     * Add Net::SSLeay::X509_STORE#set_flags method.
     * Add Net::SSLeay::X509_CRL class.
     * Add Net::SSLeay::X509_STORE_CTX class.
+    * Add Net::SSLeay::X509_STORE#add_crl method.
   
 0.003 2024-10-30
   [New Features]
